--- a/meta-hubshuffle/conf/layer.conf
+++ b/meta-hubshuffle/conf/layer.conf
@@ -10,4 +10,5 @@ BBFILE_PATTERN_meta-hubshuffle = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-hubshuffle = "6"
 
 LAYERDEPENDS_meta-hubshuffle = "core"
-LAYERSERIES_COMPAT_meta-hubshuffle = "dunfell"
+#LAYERSERIES_COMPAT_meta-hubshuffle = "dunfell"
+LAYERSERIES_COMPAT_meta-hubshuffle = "sumo"
