--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ build/cache/
 build/downloads/
 build/sstate-cache/
 build/tmp/
+build_sumo/cache/
+build_sumo/downloads/
+build_sumo/sstate-cache/
+build_sumo/tmp/
+build_sumo/*.log
+build_sumo/*.lock
