--- a/meta-hubshuffle/conf/distro/example-distro.conf
+++ b/meta-hubshuffle/conf/distro/example-distro.conf
@@ -1,4 +1,4 @@
-MAINTAINER = "yang <jamyang8383@icloud.com>"
+MAINTAINER = "yang <yang140@itri.org.tw>"
 
 require conf/distro/poky.conf
 DISTRO = "example-distro"
