--- a/build_sumo_deploy/conf/bblayers.conf
+++ b/build_sumo_deploy/conf/bblayers.conf
@@ -9,4 +9,10 @@ BBLAYERS ?= " \
   /home/yang/yocto/sumo/poky/meta \
   /home/yang/yocto/sumo/poky/meta-poky \
   /home/yang/yocto/sumo/poky/meta-yocto-bsp \
+  /home/yang/yocto/sumo/poky/meta-raspberrypi \
+  /home/yang/yocto/sumo/poky/meta-qt5 \
+  /home/yang/yocto/sumo/poky/meta-openembedded/meta-oe \
+  /home/yang/yocto/sumo/poky/meta-openembedded/meta-python \
+  /home/yang/yocto/m2_poky/meta-m2 \
+  /home/yang/yocto/sumo/poky/meta-openembedded/meta-networking \
   "
