after login autorun emb_znsd

--- a/meta-m2/conf/machine/raspberrypi3_custom3.conf
+++ b/meta-m2/conf/machine/raspberrypi3_custom3.conf
@@ -17,7 +17,7 @@ MACHINE_EXTRA_RRECOMMENDS += "\
 
 SDIMG_KERNELIMAGE ?= "kernel7.img"
 UBOOT_MACHINE = "rpi_3_32b_config"
-SERIAL_CONSOLES ?= "115200;ttyS0"
+#SERIAL_CONSOLES ?= "115200;ttyS0"
 
 ENABLE_UART = "1"
 ENABLE_I2C = "1"
