--- a/meta-m2/conf/distro/example-distro.conf
+++ b/meta-m2/conf/distro/example-distro.conf
@@ -1,10 +1,10 @@
 MAINTAINER = "yang <yang140@itri.org.tw>"
 
 require conf/distro/poky.conf
-DISTRO = "example-distro"
-DISTRO_NAME = "example distro"
+DISTRO = "M2-distro"
+DISTRO_NAME = "M2 distro"
 DISTRO_VERSION = "1.0"
-DISTRO_CODENAME = "examples"
+DISTRO_CODENAME = "M2"
 SDK_VENDOR = "-exampledistro"
 SDK_VERSION = "sdkversion"
 
