--- a/build_gatesgarth/conf/bblayers.conf
+++ b/build_gatesgarth/conf/bblayers.conf
@@ -14,4 +14,5 @@ BBLAYERS ?= " \
   /home/yang/yocto/gatesgarth/poky/meta-openembedded/meta-python \
   /home/yang/yocto/gatesgarth/poky/meta-openembedded/meta-networking \
   /home/yang/yocto/m2_sumo/meta-m2rpi4 \
+  /home/yang/yocto/gatesgarth/poky/meta-qt5 \
   "
